@@ -236,6 +236,7 @@ mow.contextMenu.selectAll = Select All
 
 option.noSuch = No such option
 option.noSuch-1 = No such option: %S
+option.noSuchType-1 = No such option type: %S
 option.replaceExisting-1 = Warning: %S already exists: replacing existing option
 option.intRequired = Integer value required
 option.operatorNotSupported-2 = Operator %S not supported for option type %S
